# compgx01_cw3_resit

./: .gitignore  README.md
cw3_control/: CMakeLists.txt  package.xml
cw3_control/config/: hand_iiwa_controller.yaml  hand_iiwa_joint_names.yaml  object_iiwa_controller.yaml  sr_lh_trajectory_controller.yaml
cw3_control/launch/: hand_iiwa_control.launch
cw3_description/: CMakeLists.txt  package.xml
cw3_description/scenes/: ucl_lab.scene
cw3_description/urdf/: hand_iiwa.urdf.xacro  kinect.urdf.xacro  object_iiwa.urdf.xacro  weighted_object.xacro
cw3_description/worlds/: cw3_grasp.world  cw3_grasp_1.world  cw3_grasp_1_backup.world  cw3_grasp_2.world  ucl_lab.world
cw3_helper/: CMakeLists.txt  package.xml  setup.py
cw3_helper/launch/: object_tracker.launch
cw3_helper/scripts/: ObjectTracker.py  PlanningSceneController.py  PlanningSceneMonitor.py  Q3.py  example_script.py
cw3_launch/config/: grasp_objects.yaml
cw3_launch/launch/: fake_hand_iiwa.launch  hand_iiwa.launch  object_iiwa.launch  q1_grasping.launch  q2_vision_grasping.launch  q3_dynamics.launch
hand_iiwa_moveit/: .setup_assistant  CMakeLists.txt  package.xml
hand_iiwa_moveit/config/: EffortJointInterface_controllers.yaml  PositionJointInterface_controllers.yaml  fake_controllers.yaml  hand_iiwa.srdf  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml
hand_iiwa_moveit/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  hand_iiwa_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  (+9 more)
iiwa_fri_description/: CMakeLists.txt  package.xml
iiwa_fri_description/launch/: example_iiwa_description_upload.launch
iiwa_fri_description/urdf/: example_iiwa7.urdf.xacro  iiwa.gazebo.xacro  iiwa.transmission.xacro  iiwa14.xacro  iiwa7.xacro
iiwa_fri_gazebo/: CMakeLists.txt  package.xml
iiwa_fri_gazebo/launch/: iiwa_world.launch
object_iiwa_moveit/: .setup_assistant  CMakeLists.txt  package.xml
(+31 files in other folders)
