<?xml version="1.0"?>
<package>
  <name>iiwa_fri_gazebo</name>
  <version>0.0.1</version>
  <description>The iiwa_fri_gazebo package</description>
    
  <author email="george.dwyer@ucl.ac.uk">George Dwyer</author>
  <author email="vijay.pawar@ucl.ac.uk">Vijay Pawar</author>
  
  <maintainer email="george.dwyer@ucl.ac.uk">George Dwyer</maintainer>

  <license>GPLv3</license>

  <url type="repository">http://github.com/surgical-vision/iiwa_fri_stack</url>
  <url type="bugtracker">http://github.com/surgical-vision/iiwa_fri_stack/issues</url>
  <url type="website">http://github.com/surgical-vision/iiwa_fri_stack/wiki</url>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>iiwa_fri_description</run_depend>
  <run_depend>gazebo_ros</run_depend> 


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
